# temp

./: thoughts.md
deliverable/: Abdelsalam_ElTamawy-900170376.tar.xz
deliverable/src/: CMakeLists.txt  daemon.cpp  lib.cpp  main.cpp
report/: report.aux  report.fdb_latexmk  report.fls  report.tex
src/: CMakeLists.txt  daemon.cpp  lib.cpp  main.cpp  remote_proc.cpp  remote_proc.hpp
src/build_debug/: CMakeCache.txt  Makefile  client  cmake_install.cmake  server
